# Burt

./: .cursorignore  .gitignore  .sourcery.yaml  =0.6.0  README.md  advanced_router.py  agent.py  ai_model_prompts.yaml  app.py  check_nvm.sh  check_versions.sh  config.py  configure_nvm.sh  documentation.txt  environment.yml  find_unnecessary_packages.py  install_node.sh  install_nvm_node.sh  main.py  manual_nvm_check.sh  models.py  modify_bashrc.sh  mongodb_fallback.json  package.json  pyproject.toml  remove.txt  requirements.in  requirements.txt  requirements_no_cuda.txt  run_tests.py  test_system.py  utils.py  verify_nvm_node.sh
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  mega-linter.yml
app/: advanced_router.py  agent.py  calibrate_threshold.py  config.py  main.py  models.py  openai_handler.ts  sample_queries.json  test_advanced_router.py
app/python/helpers/: __init__.py  dirty_json.py  docker.py  errors.py  extract_tools.py  files.py  message.py  messages.py  mongodb_client.py  perplexity_search.py  pinecone_db.py  print_style.py  rag_system.py  rate_limiter.py  redis_cache.py  shell_local.py  shell_ssh.py  tool.py  vdb.py
app/python/tools/: call_subordinate.py  code_execution_tool.py  helper_agent_tool.py  import_analyzer.py  knowledge_tool.py  memory_tool.py  online_knowledge_tool.py  response.py  task_done.py  unknown.py  web_crawler_tool.py
app/static/css/: styles.css
app/static/js/: chat.js
app/templates/: index.html
app/tests/: test_agent.py  test_online_knowledge_tool.py  test_vector_db.py
memory/embeddings/: text-embedding-3-small09ced32b-055a-571c-a518-3666cdaca259  text-embedding-3-small22913ff3-cd24-567a-b5aa-317a00dd8b65  text-embedding-3-small6125e860-ac8e-5422-acb0-e0b331a93769  text-embedding-3-small92a92010-d010-5f27-aa31-53e7bbf1ee39  text-embedding-3-smalla0c8818f-bea4-59f0-a8c8-36743c13c607  text-embedding-ada-0024b1d6e10-033a-5c33-8d9c-acf0b755bcaf  text-embedding-ada-00260054a11-5919-552c-aa15-0ae8f463e2ff  text-embedding-ada-002e98d1b76-1788-5eff-829d-eb1aa5a82e2a  text-embedding-ada-002ecc30e55-4626-5cca-939c-af4f51715608
prompts/: agent.system.md  agent.tools.md  fw.code_no_output.md
python/helpers/: extract_tools.py  timed_input.py  tool.py
python/tools/: call_subordinate.py  code_execution_tool.py  helper_agent_tool.py  knowledge_tool.py  memory_tool.py  online_knowledge_tool.py  response.py
templates/: index.html
