[tool.poetry]
name = "burton"
version = "0.1.0"
description = ""
authors = ["Gary Ocean"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-cors = "*"
python-dotenv = "*"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.9"
langchain-anthropic = "^0.1.23"
langchain-groq = "*"
langchain-huggingface = "*"
langchain-google-genai = "*"
openai = "*"
anthropic = "*"
groq = "*"
huggingface-hub = "*"
google-generativeai = "*"
beautifulsoup4 = "*"
pre-commit = "^3.8.0"
duckduckgo-search = "^6.2.11"
chromadb = "^0.5.5"
paramiko = "^3.4.1"
flake8 = "^7.1.1"
asyncio = "^3.4.3"
faiss-cpu = "^1.8.0.post1"
pinecone = "^5.1.0"
pinecone-client = "^5.0.1"
redis = "^5.0.8"
pymongo = "^4.8.0"
PyPDF2 = "^3.0.0"
nltk = "^3.9.1"
python-docx = "^1.1.2"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
